[gd_scene load_steps=11 format=2]

[ext_resource path="res://Engine/Shops/shop.gd" type="Script" id=1]
[ext_resource path="res://Drops/Arrows/5arrow.png" type="Texture" id=2]
[ext_resource path="res://Engine/Pause/item_selected.png" type="Texture" id=3]
[ext_resource path="res://Drops/Heart Container/heart_container_portrait.png" type="Texture" id=4]
[ext_resource path="res://Drops/Hearts/heart_portrait.png" type="Texture" id=5]
[ext_resource path="res://Font/PIXELADE.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://Player/GUI/Rupees/ruppes_counter.png" type="Texture" id=7]
[ext_resource path="res://Engine/Pause/empty.png" type="Texture" id=8]
[ext_resource path="res://Engine/Pause/exit_hover.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 6 )

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 160.0
margin_bottom = 48.0
color = Color( 0.0196078, 0.168627, 0.317647, 0.941176 )

[node name="Item1" type="TextureButton" parent="."]
margin_left = 8.0
margin_top = 9.0
margin_right = 24.0
margin_bottom = 25.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 3 )

[node name="Item2" type="TextureButton" parent="."]
margin_left = 40.0
margin_top = 9.0
margin_right = 56.0
margin_bottom = 25.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 3 )

[node name="Item3" type="TextureButton" parent="."]
margin_left = 72.0
margin_top = 9.0
margin_right = 88.0
margin_bottom = 25.0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 3 )

[node name="Text" type="Label" parent="."]
margin_left = 64.0
margin_top = 34.0
margin_right = 160.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "Hello !"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 36, 40 )
texture = ExtResource( 7 )

[node name="Price" type="Label" parent="Sprite"]
margin_left = 4.0
margin_top = -6.0
margin_right = 20.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 1 )
text = "20"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Sprite"]
margin_left = -32.0
margin_top = -6.0
margin_right = -8.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 1 )
text = "Price:"
align = 1
valign = 1

[node name="Exit" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 120.0
margin_top = 9.0
margin_right = 136.0
margin_bottom = 25.0
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 9 )

[node name="Label" type="Label" parent="Exit"]
margin_left = 1.0
margin_top = 4.0
margin_right = 17.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Exit"
align = 1
valign = 1

[node name="YesNo" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Yes" type="TextureButton" parent="YesNo"]
editor/display_folded = true
margin_left = 136.0
margin_top = 9.0
margin_right = 152.0
margin_bottom = 25.0
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 9 )

[node name="Label" type="Label" parent="YesNo/Yes"]
margin_left = 1.0
margin_top = 4.0
margin_right = 17.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Yes"
align = 1
valign = 1

[node name="No" type="TextureButton" parent="YesNo"]
editor/display_folded = true
margin_left = 104.0
margin_top = 9.0
margin_right = 120.0
margin_bottom = 25.0
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 9 )

[node name="Label" type="Label" parent="YesNo/No"]
margin_left = 1.0
margin_top = 4.0
margin_right = 17.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "No"
align = 1
valign = 1
